--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -11,6 +11,21 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
+/** delete **/
+  --ion-color-delete: #ff3636;
+  --ion-color-delete-rgb: 56, 128, 255;
+  --ion-color-delete-contrast: #ff3d3d;
+  --ion-color-delete-contrast-rgb: 255, 255, 255;
+  --ion-color-delete-shade: #ff0303;
+  --ion-color-delete-tint: rgb(255, 76, 76);
+
+
+
+
+
+
+
+
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
@@ -44,7 +59,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-warning-tint: #ffca22;
 
   /** danger **/
-  --ion-color-danger: #eb445a;
+  --ion-color-danger: #ff2a2a;
   --ion-color-danger-rgb: 235, 68, 90;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 255, 255, 255;
